--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: upptime # The name of this repository
 sites:
   - name: MasterAi website
     url: https://rpgmaster.ai/
+  - name: MasterAi backend
+    url: https://masterai.shuttleapp.rs/chat/count
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -13,13 +15,6 @@ status-website:
   baseUrl: /upptime
   logoUrl: https://rpgmaster.ai/assets/logo-c6712f4b.png
   name: MasterAi upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
