--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://rpgmaster.ai/
   - name: MasterAi backend
     url: https://masterai.shuttleapp.rs/chat/count
+  - name: MasterAi auth redirector
+    url: https://redirector.rpgmaster.ai
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
